# SkyChess

./: README.md  pyproject.toml  服务层设计.md  算法设计.md
algorithms_core/: README.md  __init__.py  match_runner.py
algorithms_core/agent/: __init__.py  base.py  engine_agent.py  random_agent.py  registry.py
algorithms_core/engine/: __init__.py  base.py  mcts.py  minimax.py  stockfish_engine.py
algorithms_core/eval/: __init__.py  base.py  material_eval.py
algorithms_core/game/: __init__.py  chess_game.py  game_state.py  types.py
algorithms_core/record/: __init__.py  game_record.py
chess_app/: README.md  main.py
chess_app/frontend/: api.js  app.js  index.html  state.js
chess_app/frontend/components/: board.js  control.js  eval.js  movelist.js
